# korelib

./: CMakeLists.txt  LICENSE  README.md
Source/: Assertion.hpp  Concepts.hpp  Delegate.hpp  Korelib.hpp  MemoryUtils.cpp  MemoryUtils.hpp  RuntimeException.cpp  RuntimeException.hpp  StandardStreamWrapper.hpp  StaticOnlyClass.hpp
